{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 421,
  "lineage": "98a76c62-8b77-118c-8c02-30f7c1261bac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:security-group/sg-0e2518b530c6c008d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2518b530c6c008d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ansible_sg",
            "name_prefix": "",
            "owner_id": "363401892164",
            "region": "ap-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "sg-0e2518b530c6c008d",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.vpc_hk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_hk[0]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:subnet/subnet-0a662a242be741302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a662a242be741302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363401892164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "state": "available",
            "tags": {
              "Name": "my-vpc-HK-public-ap-east-1a"
            },
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance_hk[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e91a3e208f2ff02e",
            "arn": "arn:aws:ec2:ap-east-1:363401892164:instance/i-03c78c140b2f40bd8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c78c140b2f40bd8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07f7906a955b3e695"
              }
            ],
            "primary_network_interface_id": "eni-07f7906a955b3e695",
            "private_dns": "ip-10-0-1-10.ap-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-43-198-247-83.ap-east-1.compute.amazonaws.com",
            "public_ip": "43.198.247.83",
            "region": "ap-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00f76a79775cb0867",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a662a242be741302",
            "tags": {
              "Name": "instance-0"
            },
            "tags_all": {
              "Name": "instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-0"
            },
            "vpc_security_group_ids": [
              "sg-0758daad629001ae3",
              "sg-0e2518b530c6c008d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "i-03c78c140b2f40bd8",
            "region": "ap-east-1"
          },
          "dependencies": [
            "aws_security_group.ansible_sg",
            "module.ec2_instance_hk.aws_iam_instance_profile.this",
            "module.ec2_instance_hk.aws_iam_role.this",
            "module.ec2_instance_hk.aws_security_group.this",
            "module.ec2_instance_hk.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance_hk.data.aws_partition.current",
            "module.ec2_instance_hk.data.aws_ssm_parameter.this",
            "module.ec2_instance_hk.data.aws_subnet.this",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_hk[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:security-group/sg-0758daad629001ae3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0758daad629001ae3",
            "ingress": [],
            "name": "instance-0-f563d2c1c0678bea6eb4d04320",
            "name_prefix": "instance-0-",
            "owner_id": "363401892164",
            "region": "ap-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-0"
            },
            "tags_all": {
              "Name": "instance-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "sg-0758daad629001ae3",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.ec2_instance_hk.data.aws_subnet.this",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance_hk[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:security-group-rule/sgr-0f8c2c17152702bbb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0f8c2c17152702bbb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-east-1",
            "security_group_id": "sg-0758daad629001ae3",
            "security_group_rule_id": "sgr-0f8c2c17152702bbb",
            "tags": {
              "Name": "instance-0-ipv4_default"
            },
            "tags_all": {
              "Name": "instance-0-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "sgr-0f8c2c17152702bbb",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.ec2_instance_hk.aws_security_group.this",
            "module.ec2_instance_hk.data.aws_subnet.this",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:security-group-rule/sgr-0bfbd9fcf094f4250",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0bfbd9fcf094f4250",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-east-1",
            "security_group_id": "sg-0758daad629001ae3",
            "security_group_rule_id": "sgr-0bfbd9fcf094f4250",
            "tags": {
              "Name": "instance-0-ipv6_default"
            },
            "tags_all": {
              "Name": "instance-0-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "sgr-0bfbd9fcf094f4250",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.ec2_instance_hk.aws_security_group.this",
            "module.ec2_instance_hk.data.aws_subnet.this",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_hk[1]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:subnet/subnet-0a662a242be741302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a662a242be741302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363401892164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "state": "available",
            "tags": {
              "Name": "my-vpc-HK-public-ap-east-1a"
            },
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance_hk[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e91a3e208f2ff02e",
            "arn": "arn:aws:ec2:ap-east-1:363401892164:instance/i-0234f9590b353ea94",
            "associate_public_ip_address": true,
            "availability_zone": "ap-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0234f9590b353ea94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a3a63eddd28d91f9"
              }
            ],
            "primary_network_interface_id": "eni-0a3a63eddd28d91f9",
            "private_dns": "ip-10-0-1-105.ap-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-18-166-223-128.ap-east-1.compute.amazonaws.com",
            "public_ip": "18.166.223.128",
            "region": "ap-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d04287a7eb323890",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a662a242be741302",
            "tags": {
              "Name": "instance-1"
            },
            "tags_all": {
              "Name": "instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-1"
            },
            "vpc_security_group_ids": [
              "sg-0ba94d9ce06775d61",
              "sg-0e2518b530c6c008d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "i-0234f9590b353ea94",
            "region": "ap-east-1"
          },
          "dependencies": [
            "aws_security_group.ansible_sg",
            "module.ec2_instance_hk.aws_iam_instance_profile.this",
            "module.ec2_instance_hk.aws_iam_role.this",
            "module.ec2_instance_hk.aws_security_group.this",
            "module.ec2_instance_hk.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance_hk.data.aws_partition.current",
            "module.ec2_instance_hk.data.aws_ssm_parameter.this",
            "module.ec2_instance_hk.data.aws_subnet.this",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_hk[1]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:security-group/sg-0ba94d9ce06775d61",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ba94d9ce06775d61",
            "ingress": [],
            "name": "instance-1-3e585c4564b888247fed8dcfa6",
            "name_prefix": "instance-1-",
            "owner_id": "363401892164",
            "region": "ap-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-1"
            },
            "tags_all": {
              "Name": "instance-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "sg-0ba94d9ce06775d61",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.ec2_instance_hk.data.aws_subnet.this",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance_hk[1]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:security-group-rule/sgr-0ff8d34d3ad986c1c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0ff8d34d3ad986c1c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-east-1",
            "security_group_id": "sg-0ba94d9ce06775d61",
            "security_group_rule_id": "sgr-0ff8d34d3ad986c1c",
            "tags": {
              "Name": "instance-1-ipv4_default"
            },
            "tags_all": {
              "Name": "instance-1-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "sgr-0ff8d34d3ad986c1c",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.ec2_instance_hk.aws_security_group.this",
            "module.ec2_instance_hk.data.aws_subnet.this",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:security-group-rule/sgr-0e5429ff13f86467a",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0e5429ff13f86467a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-east-1",
            "security_group_id": "sg-0ba94d9ce06775d61",
            "security_group_rule_id": "sgr-0e5429ff13f86467a",
            "tags": {
              "Name": "instance-1-ipv6_default"
            },
            "tags_all": {
              "Name": "instance-1-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "sgr-0e5429ff13f86467a",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.ec2_instance_hk.aws_security_group.this",
            "module.ec2_instance_hk.data.aws_subnet.this",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:network-acl/acl-0ecc652e46096425d",
            "default_network_acl_id": "acl-0ecc652e46096425d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ecc652e46096425d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "363401892164",
            "region": "ap-east-1",
            "subnet_ids": [
              "subnet-0a662a242be741302"
            ],
            "tags": {
              "Name": "my-vpc-HK-default"
            },
            "tags_all": {
              "Name": "my-vpc-HK-default"
            },
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_hk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:route-table/rtb-0001adb5365e4742e",
            "default_route_table_id": "rtb-0001adb5365e4742e",
            "id": "rtb-0001adb5365e4742e",
            "owner_id": "363401892164",
            "propagating_vgws": null,
            "region": "ap-east-1",
            "route": [],
            "tags": {
              "Name": "my-vpc-HK-default"
            },
            "tags_all": {
              "Name": "my-vpc-HK-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_hk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:security-group/sg-0bb60a580789fc548",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bb60a580789fc548",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "363401892164",
            "region": "ap-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-HK-default"
            },
            "tags_all": {
              "Name": "my-vpc-HK-default"
            },
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_hk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:internet-gateway/igw-0927b49ac4f152be5",
            "id": "igw-0927b49ac4f152be5",
            "owner_id": "363401892164",
            "region": "ap-east-1",
            "tags": {
              "Name": "my-vpc-HK"
            },
            "tags_all": {
              "Name": "my-vpc-HK"
            },
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "igw-0927b49ac4f152be5",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0927b49ac4f152be5",
            "id": "r-rtb-0fd9ba33bc80f34431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-east-1",
            "route_table_id": "rtb-0fd9ba33bc80f3443",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-east-1",
            "route_table_id": "rtb-0fd9ba33bc80f3443"
          },
          "dependencies": [
            "module.vpc_hk.aws_internet_gateway.this",
            "module.vpc_hk.aws_route_table.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:route-table/rtb-0fd9ba33bc80f3443",
            "id": "rtb-0fd9ba33bc80f3443",
            "owner_id": "363401892164",
            "propagating_vgws": [],
            "region": "ap-east-1",
            "route": [],
            "tags": {
              "Name": "my-vpc-HK-public"
            },
            "tags_all": {
              "Name": "my-vpc-HK-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "rtb-0fd9ba33bc80f3443",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b3cad7be5a57981",
            "region": "ap-east-1",
            "route_table_id": "rtb-0fd9ba33bc80f3443",
            "subnet_id": "subnet-0a662a242be741302"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "rtbassoc-00b3cad7be5a57981",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.vpc_hk.aws_route_table.public",
            "module.vpc_hk.aws_subnet.public",
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:subnet/subnet-0a662a242be741302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a662a242be741302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363401892164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "tags": {
              "Name": "my-vpc-HK-public-ap-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-HK-public-ap-east-1a"
            },
            "vpc_id": "vpc-06a2201ad29ac1c60"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "subnet-0a662a242be741302",
            "region": "ap-east-1"
          },
          "dependencies": [
            "module.vpc_hk.aws_vpc.this",
            "module.vpc_hk.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_hk",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:363401892164:vpc/vpc-06a2201ad29ac1c60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ecc652e46096425d",
            "default_route_table_id": "rtb-0001adb5365e4742e",
            "default_security_group_id": "sg-0bb60a580789fc548",
            "dhcp_options_id": "dopt-09a24b4f71a5bcf68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a2201ad29ac1c60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0001adb5365e4742e",
            "owner_id": "363401892164",
            "region": "ap-east-1",
            "tags": {
              "Name": "my-vpc-HK"
            },
            "tags_all": {
              "Name": "my-vpc-HK"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363401892164",
            "id": "vpc-06a2201ad29ac1c60",
            "region": "ap-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}